<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/controlsLayout"
        android:weightSum="1"
    android:orientation="vertical">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menuButtonsLayout">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="88dp"
                android:layout_height="70dp"
                android:text="@string/addNewBtn"
                android:id="@+id/addNewBtn"
                android:layout_gravity="left" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:text="@string/deleteBtn"
                android:id="@+id/deleteBtn"
                android:layout_gravity="center|left" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:text="@string/doneBtn"
                android:id="@+id/doneBtn"
                android:layout_gravity="center|right" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:text="@string/undoneBtn"
                android:id="@+id/undoneBtn"
                android:layout_gravity="right" />

        </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/todoTextEdit"
        android:inputType="text"
        android:hint="@string/TodoTextHint" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/todoListView"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:layout_weight="1.10" />

</LinearLayout>
